# config/openapi.yml
@@ -1,4 +1,4 @@
-openapi: "3.1.0"
+openapi: 3.0.0
 info:
   title: Simple User Management API
   description: Backend API example
@@ -9,20 +9,20 @@ info:
   version: 1.0.0
 
 servers:
-- url: /api/v1
-  description: SwaggerHub API Auto Mocking
+  - url: /api/v1
+    description: SwaggerHub API Auto Mocking
 
 tags:
-- name: admins
-  description: Secured Admin-only calls
-- name: users
-  description: Operations available to regular users
+  - name: admins
+    description: Secured Admin-only calls
+  - name: users
+    description: Operations available to regular users
 
 paths:
   /register:
     post:
       tags:
-      - users
+        - users
       summary: Registers a new user
       description: Adds a user to the system
       operationId: registerUser
@@ -30,7 +30,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: "#/components/schemas/User"
       responses:
         "201":
           description: User is created
@@ -41,27 +41,29 @@ paths:
       x-swagger-router-controller: Users
 
   /update:
-    post:
+    patch:
       tags:
-      - users
-      - admins
+        - users
+        - admins
       summary: Updates user's information
       description: Updates user information
       operationId: updateUser
+      security:
+        - bearerAuth: []
       parameters:
-      - name: username
-        in: query
-        description: The username to update
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
+        - name: username
+          in: query
+          description: The username to update
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: string
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: "#/components/schemas/User"
       responses:
         "200":
           description: User's updated
@@ -76,8 +78,8 @@ paths:
   /login:
     post:
       tags:
-      - users
-      - admins
+        - users
+        - admins
       summary: Logs into the system
       description: Logs in a user to the system
       operationId: loginUser
@@ -85,7 +87,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserLogin'
+              $ref: "#/components/schemas/UserLogin"
       responses:
         "200":
           description: User is logged in
@@ -96,42 +98,44 @@ paths:
   /users:
     get:
       tags:
-      - admins
+        - admins
       summary: Returns users
       description: Get the details of a user or users
       operationId: getUsers
+      security:
+        - bearerAuth: []
       parameters:
-      - name: username
-        in: query
-        description: The username of the user to return
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: email
-        in: query
-        description: The email of the user to return
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: admin
-        in: query
-        description: User groups
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: boolean
+        - name: username
+          in: query
+          description: The username of the user to return
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: string
+        - name: email
+          in: query
+          description: The email of the user to return
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: string
+        - name: admin
+          in: query
+          description: User groups
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: boolean
       responses:
         "200":
           description: Search result
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserList'
+                $ref: "#/components/schemas/UserList"
         "401":
           description: Unauthorized request
         "500":
@@ -141,18 +145,20 @@ paths:
   /user:
     get:
       tags:
-      - admins
-      - users
+        - admins
+        - users
       summary: Returns logged in user
       description: Get the details of the user
       operationId: getUser
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: User details
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/inline_response_200'
+                $ref: "#/components/schemas/inline_response_200"
         "401":
           description: Unauthorized request
         "500":
@@ -162,8 +168,8 @@ paths:
   /logout:
     get:
       tags:
-      - admins
-      - users
+        - admins
+        - users
       summary: Logs out of the system
       description: Logs out of the system and clear cookies
       operationId: logoutUser
@@ -175,31 +181,42 @@ paths:
   /delete:
     delete:
       tags:
-      - admins
+        - admins
       summary: Deletes a user from the system
       description: Deletes a user from the system
       operationId: deleteUser
+      security:
+        - bearerAuth: []
       parameters:
-      - name: username
-        in: query
-        description: The username of the user to return
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
+        - name: username
+          in: query
+          description: The username of the user to return
+          required: true
+          style: form
+          explode: true
+          schema:
+            type: string
       responses:
         "200":
           description: User's deleted
+        "401":
+          description: Unauthorized request
+        "404":
+          description: User's not found
       x-swagger-router-controller: Admins
 
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+
   schemas:
     User:
       required:
-      - email
-      - password
-      - username
+        - email
+        - password
+        - username
       type: object
       properties:
         username:
@@ -220,8 +237,8 @@ components:
         username: username
     UserLogin:
       required:
-      - email
-      - password
+        - email
+        - password
       type: object
       properties:
         email:
@@ -233,12 +250,12 @@ components:
     UserList:
       type: object
       items:
-        $ref: '#/components/schemas/User'
+        $ref: "#/components/schemas/User"
     inline_response_200:
       type: object
       properties:
         user:
-          $ref: '#/components/schemas/inline_response_200_user'
+          $ref: "#/components/schemas/inline_response_200_user"
       example:
         user:
           admin: true
