# src/api/controllers/user.js
@@ -1,3 +1,8 @@
+import { writeJsonResponse } from '../../utils/express.js';
+
 export async function getUser(req, res, next) {
-    res.json({ response: 'User\'s information' })
+    const userId = res.locals.auth.userId
+    writeJsonResponse(res, 200, {
+        message: `User information for ${userId}`
+    })
 }
