# src/api/controllers/users.js
@@ -1,3 +1,8 @@
+import { writeJsonResponse } from '../../utils/express.js';
+
 export async function getUsers(req, res) {
-    res.json({ response: 'List of users' })
+    const name = req.query.username || 'World'
+    writeJsonResponse(res, 200, {
+        message: `Hello, ${name}!`
+    })
 }
